gdk: A TOUCHPAD device behaves like a mouse

and not like a TOUCHSCREEN. So treat it like that.

https://bugzilla.gnome.org/show_bug.cgi?id=672009